--- a/04. Creative Hover Effect/style.css
+++ b/04. Creative Hover Effect/style.css
@@ -1,43 +1,43 @@
 body{
     margin: 0;
     padding: 0;
-    background-color: #555;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #555;
     height: 100vh;
 }
 .container{
     position: relative;
     width: 800px;
     height: 500px;
-    background: #222;
+    background-color: #222;
 }
 .clip{
     position: absolute;
     top: 0;
-    left: 0;
-    width: 100%;
+    bottom: 0;
     height: 100%;
-    transition: all 1s;
+    width: 100%;
+    transition: 1s;
 }
 .clip1{
-  background: url(https://images.unsplash.com/photo-1604537466158-719b1972feb8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1169&q=80) ;
-   background-size:cover ;
-    background-position:center ;
+    background: url(https://images.unsplash.com/photo-1604537466158-719b1972feb8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1169&q=80);
     clip-path: polygon(50% 0%, 0% 100%, 0 0);
+    background-position: center;
+    background-size:cover;
 }
 .clip2{
-    background:url(https://images.unsplash.com/photo-1502228213426-d4e9f2add0e5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80) ;
-     background-size:cover;
-      background-position:center ;
-      clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+    background: url(https://images.unsplash.com/photo-1502228213426-d4e9f2add0e5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
+    clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+    background-position: center;
+    background-size:cover;
 }
 .clip3{
-    background: url(https://images.unsplash.com/photo-1519757043093-285fcb07a4e4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1074&q=80) ;
-     background-size:cover ;
-      background-position:center ;
-      clip-path: polygon(50% 0%, 100% 0, 100% 100%);
+    background: url(https://images.unsplash.com/photo-1519757043093-285fcb07a4e4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1074&q=80);
+    clip-path: polygon(50% 0%, 100% 0, 100% 100%);
+    background-position: center;
+    background-size:cover;
 }
 .container:hover .clip{
     clip-path: polygon(100% 0, 100% 0, 100% 100%, 100% 100%);
