--- a/06.Creative-Menus/Menu-3/style.css
+++ b/06.Creative-Menus/Menu-3/style.css
@@ -21,10 +21,10 @@
     list-style: none;
   }
   
-  ul li a {
+  .list-items {
     color: #fff;
-    font-size: 2rem;
-    text-decoration: none;
+    font-size: 20px;
+    text-decoration:none;
     padding: 0.4rem 1rem;
     margin: 0 10px;
     position: relative;
